[package]
name = "caescript-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caescript = { git="https://github.com/caelansar/caescript.git", branch = "master", features=["vm"] }
wasm-bindgen = "0.2"


[lib]
crate-type = ["cdylib"]
